--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ node_modules/
 .env.test
 .env.production
 
-# parcel-bundler cache (https://parceljs.logs)
+# parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
