--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "rewrites": [
-    {
-      "source": "/((?!ads\\.txt|robots\\.txt|sitemap\\.xml|manifest\\.json|browserconfig\\.xml|favicon\\.ico|assets/).*)",
-      "destination": "/index.html"
-    }
-  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/assets/(.*)",
@@ -63,14 +59,6 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
-        },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: https://res.cloudinary.com; connect-src 'self' https://firebaselogging-pa.googleapis.com https://www.google-analytics.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     },
