fix: add missing headers for favicon.ico to ensure correct content type

--- a/vercel.json
+++ b/vercel.json
@@ -57,6 +57,15 @@
                     "value": "text/plain"
                 }
             ]
+        },
+        {
+            "source":"/favicon.ico",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "image/x-icon"
+                }
+            ]
         }
     ]
 }
