--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "Ye Myo Aung - Portfolio",
-  "short_name": "YMA Portfolio",
-  "description": "Professional portfolio of Ye Myo Aung, Senior Backend & Mobile Developer and Software Architect",
+  "name": "Ye Myo Aung - Senior Golang Developer Portfolio",
+  "short_name": "YMA Golang",
+  "description": "Professional portfolio of Ye Myo Aung, Senior Golang Developer specializing in backend systems, microservices, and distributed architecture",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f0fdfa",
   "theme_color": "#0a9396",
   "orientation": "portrait-primary",
-  "categories": ["portfolio", "developer", "professional"],
+  "categories": ["portfolio", "developer", "golang", "backend", "professional"],
   "lang": "en",
   "dir": "ltr",
   "icons": [
@@ -22,21 +22,40 @@
       "type": "image/png"
     },
     {
+      "src": "/assets/icons/favicon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icons/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icons/apple-touch-icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icons/apple-touch-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/icons/apple-touch-icon-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
       "src": "/assets/icons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/assets/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "/assets/icons/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
     }
   ]
 }
